# fastring

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  docs.yml
benches/: hashring.rs  python_compare.py
docs/: api.md  comparison.md  index.md  quickstart.md
fastring/: __init__.py  __init__.pyi  fastring.pyi
src/: lib.rs  ring.rs
tests/: test_fastring.py
