[package]
name = "fastring"
version = "0.1.0"
edition = "2024"

[lib]
name = "fastring"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
xxhash-rust = { version = "0.8.3", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "hashring"
harness = false
