[package]
name = "fastring"
version = "0.2.1"
edition = "2024"
description = "A fast consistent hash ring for Python, implemented in Rust."
license = "MIT"
repository = "https://github.com/savannahostrowski/fastring"
readme = "README.md"
keywords = ["consistent-hashing", "hash-ring", "pyo3"]
categories = ["data-structures", "algorithms"]

[lib]
name = "fastring"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
xxhash-rust = { version = "0.8.3", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "hashring"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
