[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "fastring"
description = "A fast consistent hash ring for Python, implemented in Rust."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Savannah Ostrowski", email = "savannah@python.org" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["consistent-hashing", "hash-ring", "ketama", "distributed-systems"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/savannahostrowski/fastring"
Repository = "https://github.com/savannahostrowski/fastring"
Issues = "https://github.com/savannahostrowski/fastring/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "uhashring>=2.4",
    "ruff>=0.15",
    "ty>=0.0.40",
]
docs = [
    "zensical>=0.0.43",
    "mkdocstrings[python]>=1.0",
]

[tool.maturin]
python-source="."
include = ["fastring/*.pyi", "fastring/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["target", "site", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["fastring", "tests", "benches"]
exclude = ["target", "site", ".venv"]
